manifests/geo-viewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: geo-viewer-deployment
  namespace: 52north
spec:
  selector:
    matchLabels:
      app: geo-viewer
  template:
    metadata:
      labels:
        app: geo-viewer
    spec:
      containers:
      - env:
        - name: PROXY_URL
          value: https://data.europa.eu/deu-proxy?
        - name: API_URL
          value: https://data.europa.eu/api/hub/repo/
        - name: BASE_HREF
          value: /geo-viewer/
        - name: DEPLOY_URL
          value: https://data.europa.eu/
        image: 52north/deu-viewer:0.9.5
        imagePullPolicy: Always
        name: geo-viewer
        ports:
        - containerPort: 80
