manifests/deu-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: deu-proxy-service
  namespace: 52north
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: deu-proxy
