manifests/52north-ingress-viewer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    prometheus.io/port: '10254'
    prometheus.io/scrape: 'true'
  name: 52north-ingress-viewer
  namespace: 52north
spec:
  rules:
  - host: data.europa.eu
    http:
      paths:
      - backend:
          serviceName: geo-viewer-service
          servicePort: 80
        path: /geo-viewer(/|$)(.*)
